[project]
name = "inaturalist"
version = "0.1.0"
description = ""
authors = [
    {name = "Jorge Cordero",email = "jorge.cordero1996@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
